--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </a>
                 
                     <!-- Resume Link (replace with your resume URL or file path) -->
-                    <a href="https://drive.google.com/file/d/1q6zkkEyWhACB2QKPpQxT4fzIIvM50AbG/view?usp=sharing" target="_blank" class="contact-btn blue-border">
+                    <a href="https://drive.google.com/file/d/1q6zkkEyWhACB2QKPpQxT4fzIIvM50AbG/view?usp=drive_link" target="_blank" class="contact-btn blue-border">
                         <i data-lucide="file-text"></i> <!-- Changed to "file-text" for Resume icon -->
                         <span>Resume</span>
                     </a>
