--- a/index.html
+++ b/index.html
@@ -52,17 +52,25 @@
                         <span>Resume</span>
                     </a>
                 </div>
-
-                <!-- Bio -->
-                <p class="bio">
+                
+                <h2 class="animated-bio">
                     Enthusiastic AI and Data Science Engineering student with a passion for developing innovative AI solutions. 
                     Highly engaged in academic projects and actively seeking opportunities to contribute to dynamic teams in Python, AI, ML, and Data Analysis.
-                </p>
+                </h2>
             </header>
 
             <!-- Main Content Sections -->
             <main>
                 <!-- Projects Section -->
+                 <section id="experience">
+                    <div class="section-header">
+                        <i data-lucide="briefcase"></i>
+                        <h2>Experience</h2>
+                    </div>
+                    <div class="experience-grid" id="experience-container">
+                        <!-- Projects will be populated via JavaScript -->
+                    </div>  
+                </section>
                 <section id="projects">
                     <div class="section-header">
                         <i data-lucide="brain"></i>
@@ -104,7 +112,7 @@
                 <section id="education">
                     <div class="section-header">
                         <i data-lucide="graduation-cap"></i>
-                        <h2>Education</h2>
+                        <h2 style="color: #ffffff;">Education</h2>
                     </div>
                     <div class="education-container">
                         <div class="education-card">
@@ -116,34 +124,6 @@
                             <h3>Kuchan Junior College</h3>
                             <p class="education-period">Grade 12 | 2019-2021</p>
                             <p class="education-grade">Percentage: 78.80%</p>
-                        </div>
-                    </div>
-                </section>
-
-                <!-- Experience Section -->
-                <section id="experience">
-                    <div class="section-header">
-                        <i data-lucide="briefcase"></i>
-                        <h2>Experience</h2>
-                    </div>
-                    <div class="experience-container">
-                        <div class="experience-card">
-                            <h3>AI Intern – XYZ Tech Solutions</h3>
-                            <p class="experience-period">Jan 2024 – May 2024</p>
-                            <ul class="experience-details">
-                                <li>Worked on developing an AI-powered chatbot using NLP techniques with Python and TensorFlow.</li>
-                                <li>Improved chatbot response accuracy by 25% by implementing transformer-based models.</li>
-                                <li>Collaborated in a 4-member team using Git and Agile development practices.</li>
-                            </ul>
-                        </div>
-                        <div class="experience-card">
-                            <h3>Data Analyst Intern – DataSolve Pvt. Ltd.</h3>
-                            <p class="experience-period">June 2023 – Aug 2023</p>
-                            <ul class="experience-details">
-                                <li>Cleaned and analyzed large datasets using Pandas, NumPy, and Excel.</li>
-                                <li>Created insightful dashboards using Power BI to support business decisions.</li>
-                                <li>Reduced data processing time by 30% through efficient scripting.</li>
-                            </ul>
                         </div>
                     </div>
                 </section>
